--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,35 +9,39 @@
     </div>
     <div class="row">
       <div class="col-lg-12 col-lg-offset-0">
+        <span style="color:black">  
         <p> 
-          <b>Hello!</b> I am a seasoned data professional with over a decade of experience. 
-          I hold a Post Graduate Diploma in Business Analytics from an esteemed business school ranked 8th in Asia. 
+          <b>Hello!</b> I am a seasoned data professional with <span style="color:white">over decade of experience in data analytics </span>. 
+          I hold a <span style="color:white">Post Graduate Diploma in Business Analytics from business school ranked 8th in Asia</span>. 
           I also hold six Microsoft Azure data certificates, which includes Azure Enterprise Data Analyst, Azure Data Scientist and Azure Data Engineer.
           </p>
           <p>
-          My expertise is in data visualization, storytelling, data analytics and building end-to-end data solutions. 
+            <span style="color:white">My expertise is in data visualization, storytelling, data analytics and building end-to-end data solutions.</span> 
           My passion for data and its ability to tell a story, derive insights and decision making is what led me to pursue a career in this field.
         </p>
         <hr class="dashed">
         <p> 
           As a data analyst, I specialize in gathering and interpreting data to extract valuable insights that can inform strategic decisions. 
-          I am skilled in various data analysis techniques and tools, such as SQL, Python, and R.
+          I am skilled in various data analysis techniques and tools, such as <span style="color:white">SQL, Python, and R</span>.
         </p>  
         <br>
         <p>
-          As a data engineer, I am responsible for the development and management of data wareshouse and build gold standard star schema model. 
-          Frequently use tools such as Azure Synapse Analytics, Azure pipeline, Azure Repos, Azure pipeline and Release (CI CD).
+          As an analytics engineer, I am responsible for the development and management of data wareshouse and build gold standard star schema model. 
+          Frequently use tools such as <span style="color:white">Azure Synapse Analytics, Azure pipeline, Azure Repos, Azure pipeline and Release (CI CD)</span>.
         </p>
         <br>  
         <p>
           But perhaps my strongest skill is my ability to create compelling visualizations that effectively communicate complex data. 
-          I use various data visualization tools such as MS Power BI, Tableau and RShiny to create clear, informative charts, graphs, and dashboards that help stakeholders make sense of the data.
+          I use various data visualization tools such as <span style="color:white">MS Power BI, Tableau and RShiny</span> to create clear, informative charts, graphs, and dashboards that help stakeholders make sense of the data.
         </p>
         <hr class="dashed">
         <p>  
-          I am committed to staying up-to-date with the latest trends and advancements in the data industry, and 
-          I enjoy collaborating with others to find innovative solutions to complex data challenges. Whether it's analyzing data to uncover trends or designing elegant data visualizations, I am passionate about using data to drive better decision-making and ultimately help organizations achieve their goals..</p>
+          Whether you need help with predictive modeling, data warehousing, ETL processes, data visualization, or any other data-related project, 
+          I am confident that I can provide the expertise and support you need. 
+          <span style="color:white">I have a strong track record of delivering successful projects on time and within budget, and I am committed to providing the highest level of service to my clients.</span> 
+          I enjoy collaborating with others to find innovative solutions to complex data challenges. </p>
         </p>
+      </span>
       </div>
       <!-- <div class="col-lg-4">
         <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
