--- a/css/main.scss
+++ b/css/main.scss
@@ -36,8 +36,8 @@
 // variables.less link and gradient background
 $head-primary: #7b4397 ;
 $head-secondary: #dc2430 ;
-$theme-primary: #24dcd0 ;
-$theme-secondary: #4fe3d9 ;
+$theme-primary: #7b4397 ;
+$theme-secondary: #7b4397 ;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
