--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,17 +2,33 @@
     <section id="features" class="features">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-left">
                     <div class="section-heading">
-						<p class="text-muted">Transform your raw data into actionable insights to take informed decisions.!</p>
+						<p class="text-muted text-center">Transform your raw data into actionable insights to take informed decisions.!</p>
 						<hr>
-                        <h2>Get our expert services on</h2>
-                        <hr>
+                        <h3>Any of these struggle sounds familiar?</h3>
+						
+						<div class = "text-left">
+							<ul><ul>
+								<li><p>Our data is siloed in its individual departments.</p></li>
+								<li><p>Our leaders don't use data to drive decision making.</p></li>
+								<li><p>We don't trust our data is accurate.</p></li>
+								<li><p>We don't have a proper data strategy.</p></li>
+								<li><p>We spend too much time on inefficient manual processes.</p></li>
+								<li><p>We lack accountability on our ongoing projects.</p></li>
+								<li><p>We have a difficult time completing projects on-time and on-budget.</p></li>
+								<li><p>We struggle to prioritize initiatives and properly allocate resources.</p></li>
+							</ul></ul>
+							
+						</div>
+						<hr>
+						<h3>Enclyx professionals can help you to build a proper data roadmap for your business.</h3>
                     </div>
-                </div>
+                </div >
             </div>
-            <div class="row">
-			<!--
+            	<!--
+			<div class="row">
+			
                 <div class="col-md-4">
                     <div class="device-container">
                         <div class="device-mockup iphone6_plus portrait white">
@@ -28,12 +44,13 @@
                     </div>
                 </div>
 			-->	
+			<!--
                 <div class="col-md-12">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-3 text-center">
                                 <div class="feature-item">
-									<!-- <img src="/img/PowerBI.png" class="img-responsive" alt="MS Power BI" > -->
+									<!- - <img src="/img/PowerBI.png" class="img-responsive" alt="MS Power BI" > - ->
 									<i class="icon-lock-open text-primary"></i>
                                     <h3>MS Power BI</h3>
                                 </div>
@@ -41,7 +58,7 @@
                             <div class="col-md-3">
 								
                                 <div class="feature-item">
-                                    <!-- <img src="/img/mssql.png" class="img-responsive" alt="MS Power BI" >  -->
+                                    <!- - <img src="/img/mssql.png" class="img-responsive" alt="MS Power BI" >  - ->
 									<i class="icon-lock-open text-primary"></i>
                                     <h3>MS SQL Server</h3>
                                 </div>
@@ -61,6 +78,7 @@
                                 </div>
                             </div>
                         </div>
+						-->
 						<!--
                         <div class="row">
                             <div class="col-md-4">
@@ -85,8 +103,9 @@
                                 </div>
                             </div>
                     </div>
-					-->
+					
                 </div>
+				-->
 
             </div>
     </section>
