--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -227,7 +227,8 @@ header {
 }
 
 section {
-  padding: 100px 0;
+  padding: 25px 0;
+  background-color: floralwhite;
   h2 {
     font-size: 50px;
   }
