--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h3 class="section-heading">Our clients</h3>
+                <h3 class="section-heading">Testimonials</h3>
                 <hr class="primary">
                 <br />
             </div>
@@ -10,22 +10,22 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-md-6 text-center">
+            <div class="col-lg-4 col-md-6 text-left">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-google wow bounceIn text-primary"></i>
-                    <h3>Marolina Outdoor</h3>
+                    <!-- <i class="fa fa-4x fa-google wow bounceIn text-primary"></i> -->
+                    <p>Collaborating with Enclyx proved transformative for our data analytics. Their profound understanding of the Microsoft stack, along with insightful strategies, reshaped our approach </p> <p>CTO, Retail Organization</p>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 text-center">
+            <div class="col-lg-4 col-md-6 text-left">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>BlueSkyATG</h3>
+                    <!-- <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>  -->
+                    <p>Enclyx's extensive experience and deep knowledge of Power BI and SQL Server brought unparalleled value to our projects. Their effective project management ensured seamless execution.</p>  <p>Strategy Head Data and Analytics, Healthcare</p>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 text-center">
+            <div class="col-lg-4 col-md-6 text-left">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-amazon wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Heritage Services</h3>
+                    <!-- <i class="fa fa-4x fa-amazon wow bounceIn text-primary" data-wow-delay=".2s"></i>  -->
+                    <p>We needed inventory planning our warehouse. Enclyx expertize, dedication and to do attitude helped us to significantly improve our forecast and plan inventory.</p>  <p>Financial Head, Decor Ecommerce</p>
                 </div>
             </div>
 			<!--
