--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
 <section id="contact" class="contact bg-primary">
     <div class="container">
         <h4>Let's connect</h4>
-		<h3>vasim@enclyx.com</h3>
+		<h3>aba20shaikhabdulv@iima.ac.in</h3>
 		<h3>All rights reserved | All wrong reversed</h3>
 		<!--
         <ul class="list-inline list-social">
