--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,8 @@
 						<hr>
 						<p>
 						<h4>Get 1 hour of free online consultation</h4>
-						<h4>aba20shaikhabdulv@iima.ac.in</h4>
-						<h4>abdulvasimabdulsirajshaikh@gmail.com</h4>
+						<h4>inqury@enclyx.com</h4>
+						<h4>sales@enclyx.com</h4>
 						</p>
                     </div>
                 </div>
