--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -21,7 +21,7 @@ $card-bg-color: linear-gradient(
   rgba(255, 255, 255, 0.10) 15%,
   rgba(255, 255, 255, 0.05) 80%
 );
-$primary-color: #ff073a;
+$primary-color: #00ff80;
 $secondary-color: #0080ff;
 $text-selection-color: rgba(0, 255, 182, 0.2);
 $skill-language-color: #80ffbf;
