--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -108,7 +108,7 @@
       {% endif %}
       
       {% if site.andela_username != null %}
-        <a class="social-link twitter" aria-label="My Twitter" target="_blank"
+        <a class="social-link andela" aria-label="My Twitter" target="_blank"
           rel="noreferrer" href="https://client.andela.com/talent/profile/85f02393-7f60-4b08-ae5d-752364031a98?_ga=2.171331939.297200818.1747018945-1929285281.1741785206&_gl=1*1l723z8*_gcl_au*MTYxNjUxOTc3OC4xNzQxNzg1MTQ4LjEzNDY2OTY3OTMuMTc0NjY5MzgxNC4xNzQ2NjkzODEz*_ga*MTkyOTI4NTI4MS4xNzQxNzg1MjA2*_ga_1SBBGYT8D7*czE3NDcwNTk1ODgkbzEwMSRnMSR0MTc0NzA1OTc0MSRqNTYkbDAkaDA.*_ga_9ZFR0H5J2S*czE3NDcwNTk1ODgkbzEwMiRnMSR0MTc0NzA1OTc0MSRqNTYkbDAkaDA."
         >
           <svg viewBox="0 0 200 200" class="circle">
@@ -116,7 +116,7 @@
           </svg>
           <div class="social">
             <svg class="social-svg" viewBox="0 0 48 48">
-              <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#xbox" | prepend: site.baseurl }}"></use>
+              <use x="12" y="12" width="40" height="40" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#andela" | prepend: site.baseurl }}"></use>
             </svg>
           </div>
           <span class="label">Andela</span>
@@ -124,7 +124,7 @@
       {% endif %}
 
       {% if site.andela_username != null %}
-        <a class="social-link twitter" aria-label="My Twitter" target="_blank"
+        <a class="social-link upwork" aria-label="My Twitter" target="_blank"
           rel="noreferrer" href="https://www.upwork.com/freelancers/~010f7c81e1e23f04a3"
         >
           <svg viewBox="0 0 200 200" class="circle">
@@ -132,7 +132,7 @@
           </svg>
           <div class="social">
             <svg class="social-svg" viewBox="0 0 48 48">
-              <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#superpowers" | prepend: site.baseurl }}"></use>
+              <use x="9" y="13" width="330" height="330" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#upwork" | prepend: site.baseurl }}"></use>
             </svg>
           </div>
           <span class="label">UpWork</span>
