--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,16 @@
         {% include section-projects.html %}
       </section>
     {% endif %}
+    {%if site.show_freelance_exp_card %}
+      <section class="card neumorphism-card-big">
+        {% include section-freelance_exp.html %}
+      </section>
+    {% endif %}
+    {%if site.show_work_exp_card %}
+      <section class="card neumorphism-card-big">
+        {% include section-work_exp.html %}
+      </section>
+    {% endif %}
     {%if site.show_timeline_card %}
       <section class="card neumorphism-card-big">
         {% include section-timeline.html %}
