--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -30,6 +30,9 @@ $skill-tool-color: #80bfff;
 $social-email-color: #008040;
 $social-linkedin-color: #007bb6;
 $social-twitter-color: #1da1f2;
+$social-andela-color: #023B40;
+$social-upwork-color: #14a800;
+$social-youtube-color: #FF0000;
 
 /* General */
 
@@ -381,6 +384,36 @@ a {
     .social-svg {
       fill: $social-twitter-color;
     }
+  }
+
+  .andela:hover {
+    .circle {
+      animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
+        colorTwitter 1s linear forwards;
+    }
+    .social-svg {
+      fill: $social-andela-color;
+    }
+  }
+
+  .upwork:hover {
+  .circle {
+    animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
+      colorTwitter 1s linear forwards;
+  }
+  .social-svg {
+    fill: $social-upwork-color;
+  }
+  }
+
+  .youtube:hover {
+  .circle {
+    animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
+      colorTwitter 1s linear forwards;
+  }
+  .social-svg {
+    fill: $social-youtube-color;
+  }
   }
 
   @keyframes outWaveIn {
