--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -27,22 +27,6 @@
         </a>
       {% endif %}
 
-      {% if site.github_username != null %}
-        <a class="social-link" aria-label="My GitHub" target="_blank" rel="noreferrer"
-          href="https://github.com/{{site.github_username}}"
-        >
-          <svg viewBox="0 0 200 200" class="circle">
-            <circle cx="100" cy="100" r="80" />
-          </svg>
-          <div class="social">
-            <svg class="social-svg" viewBox="0 0 48 48">
-              <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#github" | prepend: site.baseurl }}"></use>
-            </svg>
-          </div>
-          <span class="label">GitHub </span>
-        </a>
-      {% endif %}
-
       {% if site.codepen_username != null %}
         <a class="social-link" aria-label="My Codepen" target="_blank" rel="noreferrer"
           href="https://codepen.io/{{site.codepen_username}}"
@@ -88,6 +72,38 @@
             </svg>
           </div>
           <span class="label">LinkedIn</span>
+        </a>
+      {% endif %}
+
+      <!-- {% if site.linkedin_username != null %}
+        <a class="social-link whatsapp" aria-label="My LinkedIn" target="_blank"
+          rel="noreferrer" href="https://www.linkedin.com/in/{{site.linkedin_username}}"
+        > 
+          <svg viewBox="0 0 200 200" class="circle">
+            <circle cx="100" cy="100" r="80" />
+          </svg>
+          <div class="social">
+            <svg class="social-svg" viewBox="0 0 48 48">
+              <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#whatsapp" | prepend: site.baseurl }}"></use>
+            </svg>
+          </div>
+          <span class="label">WhatsApp</span>
+        </a>
+      {% endif %} -->
+
+      {% if site.github_username != null %}
+        <a class="social-link" aria-label="My GitHub" target="_blank" rel="noreferrer"
+          href="https://github.com/{{site.github_username}}"
+        >
+          <svg viewBox="0 0 200 200" class="circle">
+            <circle cx="100" cy="100" r="80" />
+          </svg>
+          <div class="social">
+            <svg class="social-svg" viewBox="0 0 48 48">
+              <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#github" | prepend: site.baseurl }}"></use>
+            </svg>
+          </div>
+          <span class="label">GitHub </span>
         </a>
       {% endif %}
 
