--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -8,7 +8,7 @@
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
-        data-rotate='["{{site.typing_text}}", "scroll down for more."]'
+        data-rotate='["{{site.typing_text}}", "vasim@enclyx.com" ,"scroll down for more."]'
       >
       </span>
     </h1> 
