--- a/_includes/section-work_exp.html
+++ b/_includes/section-work_exp.html
@@ -7,7 +7,7 @@
           <h3>{{project.name}}</h3>
           <h3>{{project.Period}}</h3>
         </div>
-        
+        {{project.desig}}
         <p class="project-desc">{{project.descr}}</p>
         {% if project.demo %}
           <a class="highlight-link" href="{{project.demo}}" target="_blank" rel="noreferrer">
